--- a/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookbaseinfo.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookbaseinfo.html
@@ -19,24 +19,24 @@
                                 <input type="text" name="author"/>
                             </li>
                             <li>
-                                <label>图书类别编号：</label>
+                                <label>图书类别：</label>
                                 <select name="bookType" th:with="type=${@dict.getType('busi_book_type')}">
                                     <option value="">所有</option>
                                     <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
                                 </select>
                             </li>
                             <li>
-                                <label>ISBN编号：</label>
+                                <label>ISBN：</label>
                                 <input type="text" name="ISBN"/>
                             </li>
-                            <li>
+                            <!--<li>
                                 <label>出版社：</label>
                                 <input type="text" name="publisher"/>
                             </li>
                             <li>
                                 <label>出版日期：</label>
                                 <input type="text" class="time-input" placeholder="请选择出版日期" name="publishTime"/>
-                            </li>
+                            </li>-->
                             <li>
                                 <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
                                 <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
@@ -70,6 +70,7 @@
         var editFlag = [[${@permission.hasPermi('busi:bookbaseinfo:edit')}]];
         var removeFlag = [[${@permission.hasPermi('busi:bookbaseinfo:remove')}]];
         var detailFlag=[[${@permission.hasPermi('busi:bookbaseinfo:detail')}]];
+        var preBorrowFlag=[[${@permission.hasPermi('busi:bookbaseinfo:preBorrow')}]];
         var bookTypeDatas = [[${@dict.getType('busi_book_type')}]];
         var prefix = ctx + "busi/bookbaseinfo";
 
@@ -81,6 +82,7 @@
                 detailUrl: prefix + "/detail/{id}",
                 removeUrl: prefix + "/remove",
                 exportUrl: prefix + "/export",
+                preBorrowUrl:prefix+"/preBorrow",
                 modalName: "图书管理",
                 columns: [{
                     checkbox: true
@@ -122,7 +124,8 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="javascript:void(0)" onclick="$.operate.detail(\'' + row.id + '\')"><i class="fa fa-search"></i>详细</a>');
+                        actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="javascript:void(0)" onclick="$.operate.detail(\'' + row.id + '\')"><i class="fa fa-search"></i>详细</a> ');
+                        actions.push('<a class="btn btn-primary btn-xs \'' + preBorrowFlag + '\'" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')"><i class="fa fa-anchor"></i>预借</a> ');
                         actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
 
                         // actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
@@ -135,6 +138,13 @@
             };
             $.table.init(options);
         });
+
+        function preBorrow(id) {
+            $.modal.confirm("确定要预借吗？", function() {
+                // var data = { "ids": id };
+                $.operate.get(ctx+"/busi/bookborrow/preBorrow/"+ id);
+            })
+        }
     </script>
 </body>
 </html>
