--- a/ruoyi-admin/src/main/resources/templates/system/user/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org" >
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
 	<th:block th:include="include :: header('新增用户')" />
 	<th:block th:include="include :: select2-css" />
@@ -18,19 +18,44 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-sm-6">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label">归属部门：</label>
+                        <label class="col-sm-4 control-label">用户性别：</label>
+                        <div class="col-sm-8">
+                            <select name="sex" class="form-control m-b" th:with="type=${@dict.getType('sys_user_sex')}">
+                                <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label is-required">登录账号：</label>
+                        <div class="col-sm-8">
+                            <input id="loginName" name="loginName" placeholder="请输入登录账号" class="form-control" type="text" maxlength="30" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label is-required">登录密码：</label>
                         <div class="col-sm-8">
                             <div class="input-group">
-                            	<input name="deptName" onclick="selectDeptTree()" id="treeName" type="text" placeholder="请选择归属部门" class="form-control">
-                                <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                                <input id="password" name="password" placeholder="请输入登录密码" class="form-control" type="password" th:value="${@config.getKey('sys.user.initPassword')}" required>
+                                <span class="input-group-addon" title="登录密码,鼠标按下显示密码"
+                                      onmousedown="$('#password').attr('type','text')"
+                                      onmouseup="$('#password').attr('type','password')"><i class="fa fa-key"></i></span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
+
                 <div class="col-sm-6">
                     <div class="form-group">
                         <label class="col-sm-4 control-label">手机号码：</label>
@@ -54,40 +79,27 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12" shiro:hasPermission="system:user:role">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label is-required">登录账号：</label>
-                        <div class="col-sm-8">
-                            <input id="loginName" name="loginName" placeholder="请输入登录账号" class="form-control" type="text" maxlength="30" required>
+                        <label class="col-xs-2 control-label">角色：</label>
+                        <div class="col-xs-10">
+                            <label th:each="role:${roles}" class="check-box">
+                                <input name="role" type="checkbox" th:value="${role.roleId}" th:text="${role.roleName}" th:disabled="${role.status == '1'}">
+                            </label>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-12" shiro:lacksPermission="system:user:role">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label is-required">登录密码：</label>
-                        <div class="col-sm-8">
-                            <div class="input-group">
-                                <input id="password" name="password" placeholder="请输入登录密码" class="form-control" type="password" th:value="${@config.getKey('sys.user.initPassword')}" required>
-                                <span class="input-group-addon" title="登录密码,鼠标按下显示密码"
-                                    onmousedown="$('#password').attr('type','text')"
-                                    onmouseup="$('#password').attr('type','password')"><i class="fa fa-key"></i></span>
-                            </div>
+                        <label class="col-xs-2 control-label">角色：</label>
+                        <div class="col-xs-10">
+                            <div class="form-control-static" th:text="读者">
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label">用户性别：</label>
-                        <div class="col-sm-8">
-                            <select name="sex" class="form-control m-b" th:with="type=${@dict.getType('sys_user_sex')}">
-				                <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
-				            </select>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="col-sm-6">
                     <div class="form-group">
                         <label class="col-sm-4 control-label">用户状态：</label>
@@ -100,30 +112,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-            	<div class="col-sm-12">
-                    <div class="form-group">
-                        <label class="col-xs-2 control-label">岗位：</label>
-                        <div class="col-xs-4">
-                            <select id="post" class="form-control select2-multiple" multiple>
-								<option th:each="post:${posts}" th:value="${post.postId}" th:text="${post.postName}" th:disabled="${post.status == '1'}"></option>
-							</select>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-            	<div class="col-sm-12">
-                    <div class="form-group">
-                        <label class="col-xs-2 control-label">角色：</label>
-                        <div class="col-xs-10">
-                            <label th:each="role:${roles}" class="check-box">
-								<input name="role" type="checkbox" th:value="${role.roleId}" th:text="${role.roleName}" th:disabled="${role.status == '1'}">
-							</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+
             <h4 class="form-header h4">其他信息</h4>
             <div class="row">
                 <div class="col-sm-12">
