用户界面修改

--- a/ruoyi-admin/src/main/resources/templates/index-topnav.html
+++ b/ruoyi-admin/src/main/resources/templates/index-topnav.html
@@ -83,7 +83,7 @@
 			  <ul class="nav">
 			    <li>
 			      <a class="menuItem" th:href="@{/system/main}">
-			      <i class="fa fa-home"></i> <span class="nav-label">首页</span></a>
+			      <!--<i class="fa fa-home"></i> <span class="nav-label">首页</span></a>-->
 			    </li>
 			  </ul>
 			</div>
@@ -279,7 +279,6 @@
             </button>
             <nav class="page-tabs menuTabs">
                 <div class="page-tabs-content">
-                    <a href="javascript:;" class="active menuTab" th:data-id="@{/system/main}">首页</a>
                 </div>
             </nav>
             <button class="roll-nav roll-right tabRight">
