--- a/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookbaseinfo.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookbaseinfo.html
@@ -37,6 +37,7 @@
                                 <label>出版日期：</label>
                                 <input type="text" class="time-input" placeholder="请选择出版日期" name="publishTime"/>
                             </li>-->
+
                             <li>
                                 <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
                                 <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
@@ -70,8 +71,9 @@
         var editFlag = [[${@permission.hasPermi('busi:bookbaseinfo:edit')}]];
         var removeFlag = [[${@permission.hasPermi('busi:bookbaseinfo:remove')}]];
         var detailFlag=[[${@permission.hasPermi('busi:bookbaseinfo:detail')}]];
-        var preBorrowFlag=[[${@permission.hasPermi('busi:bookbaseinfo:preBorrow')}]];
+        var preBorrowFlag=[[${@permission.hasPermi('busi:preBorrow:add')}]];
         var bookTypeDatas = [[${@dict.getType('busi_book_type')}]];
+        var stateDatas = [[${@dict.getType('busi_book_state')}]];
         var prefix = ctx + "busi/bookbaseinfo";
 
         $(function() {
@@ -82,7 +84,7 @@
                 detailUrl: prefix + "/detail/{id}",
                 removeUrl: prefix + "/remove",
                 exportUrl: prefix + "/export",
-                preBorrowUrl:prefix+"/preBorrow",
+                // preBorrowUrl:prefix+"/preBorrow",
                 modalName: "图书管理",
                 columns: [{
                     checkbox: true
@@ -120,12 +122,19 @@
                     title: '出版日期'
                 },
                 {
+                    field: 'state',
+                    title: '状态',
+                    formatter: function(value, row, index) {
+                        return $.table.selectDictLabel(stateDatas, value);
+                    }
+                },
+                {
                     title: '操作',
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
                         actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="javascript:void(0)" onclick="$.operate.detail(\'' + row.id + '\')"><i class="fa fa-search"></i>详细</a> ');
-                        actions.push('<a class="btn btn-primary btn-xs \'' + preBorrowFlag + '\'" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')"><i class="fa fa-anchor"></i>预借</a> ');
+                        actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>预借</a> ');
                         actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
 
                         // actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
@@ -139,10 +148,11 @@
             $.table.init(options);
         });
 
-        function preBorrow(id) {
+        function preBorrow(bookId) {
             $.modal.confirm("确定要预借吗？", function() {
-                // var data = { "ids": id };
-                $.operate.get(ctx+"/busi/bookborrow/preBorrow/"+ id);
+                var data = { "bookId": bookId };
+                // $.operate.get(ctx+"busi/preBorrow/add/"+ bookId);
+                $.operate.post(ctx+"busi/preBorrow/add", data);
             })
         }
     </script>
