--- a/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookselect.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookselect.html
@@ -47,7 +47,7 @@
                 </form>
             </div>
 
-            <div class="btn-group-sm" id="toolbar" role="group">
+           <!-- <div class="btn-group-sm" id="toolbar" role="group">
                 <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="busi:bookbaseinfo:add">
                     <i class="fa fa-plus"></i> 添加
                 </a>
@@ -59,7 +59,7 @@
                 </a>
                 <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="busi:bookbaseinfo:export">
                     <i class="fa fa-download"></i> 导出
-                </a>
+                </a>-->
             </div>
             <div class="col-sm-12 select-table table-striped">
                 <table id="bootstrap-table"></table>
@@ -136,13 +136,7 @@
                         var actions = [];
                         actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="javascript:void(0)" onclick="$.operate.detail(\'' + row.id + '\')"><i class="fa fa-search"></i>详细</a> ');
                         actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>预约</a> ');
-                        // actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="borrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>借阅</a> ');
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-
-                        // actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
-
+                        actions.push('<a class="btn btn-primary btn-xs ' + borrowFlag + '" href="javascript:void(0)" onclick="borrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>借阅</a> ');
                         return actions.join('');
                     }
                 }]
@@ -157,7 +151,6 @@
                 $.operate.post(ctx+"busi/preBorrow/add", data);
             })
         }
-
         function borrow(bookId) {
             $.modal.confirm("确定要借阅吗？", function() {
                 var data = { "bookId": bookId };
