--- a/ruoyi-admin/src/main/resources/templates/busi/borrow/add.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/borrow/add.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <th:block th:include="include :: header('新增借阅查询')" />
+    <th:block th:include="include :: header('新增借阅')" />
     <th:block th:include="include :: datetimepicker-css" />
 </head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-borrow-add">
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">用户id：</label>
+                <label class="col-sm-3 control-label is-required">用户登录名：</label>
                 <div class="col-sm-8">
                     <input name="userId" class="form-control" type="text" required>
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">图书id：</label>
+                <label class="col-sm-3 control-label is-required">图书编号：</label>
                 <div class="col-sm-8">
                     <input name="bookId" class="form-control" type="text" required>
                 </div>
             </div>
-            <div class="form-group">    
+            <!--<div class="form-group">
                 <label class="col-sm-3 control-label is-required">借出时间：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
@@ -27,15 +27,15 @@
                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                     </div>
                 </div>
-            </div>
-            <div class="form-group">    
+            </div>-->
+           <!-- <div class="form-group">
                 <label class="col-sm-3 control-label is-required">是否还书：0-未还 1-已还：</label>
                 <div class="col-sm-8">
                     <select name="state" class="form-control m-b" th:with="type=${@dict.getType('busi_borrow_state')}" required>
                         <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
                     </select>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">    
                 <label class="col-sm-3 control-label">备注：</label>
                 <div class="col-sm-8">
