--- a/ruoyi-admin/src/main/resources/templates/busi/borrow/borrow.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/borrow/borrow.html
@@ -11,19 +11,28 @@
                     <div class="select-list">
                         <ul>
                             <li>
-                                <label>用户id：</label>
-                                <input type="text" name="userId"/>
+                                <!--<label>用户编号：</label>-->
+                                <label>用户登录名：</label>
+                                <input type="text" name="userLoginName"/>
                             </li>
+                            <!--<li>
+                                <label>用户昵称：</label>
+                                <input type="text" name="userName"/>
+                            </li>-->
                             <li>
-                                <label>图书id：</label>
+                                <label>图书编号：</label>
                                 <input type="text" name="bookId"/>
                             </li>
                             <li>
+                                <label>图书名称：</label>
+                                <input type="text" name="bookName"/>
+                            </li>
+                            <!--<li>
                                 <label>借出时间：</label>
                                 <input type="text" class="time-input" placeholder="请选择借出时间" name="borrowDate"/>
-                            </li>
+                            </li>-->
                             <li>
-                                <label>是否还书：0-未还 1-已还：</label>
+                                <label>是否还书</label>
                                 <select name="state" th:with="type=${@dict.getType('busi_borrow_state')}">
                                     <option value="">所有</option>
                                     <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
@@ -82,11 +91,24 @@
                 },
                 {
                     field: 'userId',
-                    title: '用户id'
+                    title: '用户id',
+                    visible: false
                 },
                 {
                     field: 'bookId',
-                    title: '图书id'
+                    title: '图书编号'
+                },
+                {
+                    field: 'bookName',
+                    title: '图书名称'
+                },
+                {
+                    field: 'userLoginName',
+                    title: '用户登录名'
+                },
+                {
+                    field: 'userName',
+                    title: '用户昵称'
                 },
                 {
                     field: 'borrowDate',
@@ -102,7 +124,7 @@
                 },
                 {
                     field: 'state',
-                    title: '是否还书：0-未还 1-已还',
+                    title: '是否还书',
                     formatter: function(value, row, index) {
                        return $.table.selectDictLabel(stateDatas, value);
                     }
@@ -112,8 +134,8 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>续借</a> ');
+                        actions.push('<a class="btn btn-warning btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>还书</a>');
                         return actions.join('');
                     }
                 }]
