--- a/ruoyi-admin/src/main/resources/templates/busi/preBorrow/preBorrow.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/preBorrow/preBorrow.html
@@ -11,6 +11,19 @@
                 <div class="select-list">
                     <ul>
                         <li>
+                            <!--<label>用户编号：</label>-->
+                            <label>用户登录名：</label>
+                            <input type="text" name="userLoginName"/>
+                        </li>
+                        <li>
+                            <label>图书编号：</label>
+                            <input type="text" name="bookId"/>
+                        </li>
+                        <li>
+                            <label>图书名称：</label>
+                            <input type="text" name="bookName"/>
+                        </li>
+                        <li>
                             <label>状态：</label>
                             <select name="state" th:with="type=${@dict.getType('busi_preBorrow_state')}">
                                 <option value="">所有</option>
@@ -69,12 +82,25 @@
                     visible: false
                 },
                 {
-                    field: 'userId',
-                    title: '图书id'
+                    field: 'bookId',
+                    title: '图书编号',
                 },
                 {
-                    field: 'bookId',
-                    title: '用户id'
+                    field: 'bookName',
+                    title: '图书名称',
+                },
+                {
+                    field: 'userId',
+                    title: '用户id',
+                    visible: false
+                },
+                {
+                    field: 'userLoginName',
+                    title: '用户登录名'
+                },
+                {
+                    field: 'userName',
+                    title: '用户昵称'
                 },
                 {
                     field: 'createTime',
@@ -96,8 +122,13 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
+                        console.log(value);
+
                         actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                        if(row.state==0){
+                            actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>取消</a>');
+                        }
+
                         return actions.join('');
                     }
                 }]
