--- a/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookbaseinfo.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookbaseinfo.html
@@ -135,7 +135,7 @@
                     formatter: function(value, row, index) {
                         var actions = [];
                         actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="javascript:void(0)" onclick="$.operate.detail(\'' + row.id + '\')"><i class="fa fa-search"></i>详细</a> ');
-                        actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>预约</a> ');
+                        // actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>预约</a> ');
                         // actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="borrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>借阅</a> ');
                         actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
 
