--- a/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookselect.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/bookselect.html
@@ -4,8 +4,8 @@
     <th:block th:include="include :: header('图书管理列表')" />
 </head>
 <body class="gray-bg">
-     <div class="container-div">
-        <div class="row">
+     <div class="container-div" style="height:0% ">
+        <div class="row" >
             <div class="col-sm-12 search-collapse">
                 <form id="formId">
                     <div class="select-list">
@@ -47,19 +47,7 @@
                 </form>
             </div>
 
-           <!-- <div class="btn-group-sm" id="toolbar" role="group">
-                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="busi:bookbaseinfo:add">
-                    <i class="fa fa-plus"></i> 添加
-                </a>
-                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="busi:bookbaseinfo:edit">
-                    <i class="fa fa-edit"></i> 修改
-                </a>
-                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="busi:bookbaseinfo:remove">
-                    <i class="fa fa-remove"></i> 删除
-                </a>
-                <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="busi:bookbaseinfo:export">
-                    <i class="fa fa-download"></i> 导出
-                </a>-->
+
             </div>
             <div class="col-sm-12 select-table table-striped">
                 <table id="bootstrap-table"></table>
@@ -71,7 +59,7 @@
         var editFlag = [[${@permission.hasPermi('busi:bookbaseinfo:edit')}]];
         var removeFlag = [[${@permission.hasPermi('busi:bookbaseinfo:remove')}]];
         var detailFlag=[[${@permission.hasPermi('busi:bookbaseinfo:detail')}]];
-        var preBorrowFlag=[[${@permission.hasPermi('busi:preBorrow:add')}]];
+        var preBorrowFlag=[[${@permission.hasPermi('busi:preBorrow:appointment')}]];
         var borrowFlag=[[${@permission.hasPermi('busi:borrow:add')}]];
         var bookTypeDatas = [[${@dict.getType('busi_book_type')}]];
         var stateDatas = [[${@dict.getType('busi_book_state')}]];
@@ -135,8 +123,9 @@
                     formatter: function(value, row, index) {
                         var actions = [];
                         actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="javascript:void(0)" onclick="$.operate.detail(\'' + row.id + '\')"><i class="fa fa-search"></i>详细</a> ');
-                        actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>预约</a> ');
                         actions.push('<a class="btn btn-primary btn-xs ' + borrowFlag + '" href="javascript:void(0)" onclick="borrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>借阅</a> ');
+                        actions.push('<a class="btn btn-primary btn-xs ' + preBorrowFlag + '" href="javascript:void(0)" onclick="preBorrow(\'' + row.id + '\')" ><i class="fa fa-anchor"></i>预约</a> ');
+
                         return actions.join('');
                     }
                 }]
@@ -148,7 +137,7 @@
             $.modal.confirm("确定要预约吗？", function() {
                 var data = { "bookId": bookId };
                 // $.operate.get(ctx+"busi/preBorrow/add/"+ bookId);
-                $.operate.post(ctx+"busi/preBorrow/add", data);
+                $.operate.post(ctx+"busi/preBorrow/appointment", data);
             })
         }
         function borrow(bookId) {
