--- a/ruoyi-admin/src/main/resources/templates/index.html
+++ b/ruoyi-admin/src/main/resources/templates/index.html
@@ -229,7 +229,7 @@
             </button>
             <nav class="page-tabs menuTabs">
                 <div class="page-tabs-content">
-                    <!--<a href="javascript:;" class="active menuTab" th:data-id="@{/system/main}">首页</a>-->
+                    <a href="javascript:;" class="active menuTab" th:data-id="@{/busi/bookbaseinfo/select}">图书查询</a>
                 </div>
             </nav>
             <button class="roll-nav roll-right tabRight">
@@ -241,8 +241,8 @@
         <a id="ax_close_max" class="ax_close_max" href="#" title="关闭全屏"> <i class="fa fa-times-circle-o"></i> </a>
 
         <div class="row mainContent" id="content-main" th:style="${#bools.isFalse(ignoreFooter)} ? |height: calc(100% - 91px)|">
-            <iframe class="RuoYi_iframe" name="iframe0" width="100%" height="100%" th:data-id="@{/system/main}"
-                    th:src="@{/system/main}" frameborder="0" seamless></iframe>
+            <iframe class="RuoYi_iframe" name="iframe0" width="100%" height="100%" th:data-id="@{/busi/bookbaseinfo/select}"
+                    th:src="@{/busi/bookbaseinfo/select}" frameborder="0" seamless></iframe>
         </div>
         
         <div th:if="${ignoreFooter}" class="footer">
