--- a/ruoyi-admin/src/main/resources/templates/busi/bill/add.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bill/add.html
@@ -2,6 +2,7 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <th:block th:include="include :: header('新增账单管理')" />
+    <th:block th:include="include :: datetimepicker-css" />
 </head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
@@ -25,12 +26,6 @@
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">上一个节点(id)：</label>
-                <div class="col-sm-8">
-                    <input name="preId" class="form-control" type="text" required>
-                </div>
-            </div>
-            <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">账单类型：0押金、1损坏赔偿、2丢失赔偿、3超时赔偿：</label>
                 <div class="col-sm-8">
                     <select name="billType" class="form-control m-b" th:with="type=${@dict.getType('busi_bill_type')}" required>
@@ -39,11 +34,20 @@
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">账单标识：0-入账 1出账：</label>
+                <label class="col-sm-3 control-label is-required">账单标识：0-未支付 1-现金 2-支付宝：</label>
                 <div class="col-sm-8">
                     <select name="billSign" class="form-control m-b" th:with="type=${@dict.getType('busi_bill_sign')}" required>
                         <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
                     </select>
+                </div>
+            </div>
+            <div class="form-group">    
+                <label class="col-sm-3 control-label">支付时间：</label>
+                <div class="col-sm-8">
+                    <div class="input-group date">
+                        <input name="payTime" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                    </div>
                 </div>
             </div>
             <div class="form-group">    
@@ -52,15 +56,10 @@
                     <input name="remark" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">父id：</label>
-                <div class="col-sm-8">
-                    <input name="parentId" class="form-control" type="text">
-                </div>
-            </div>
         </form>
     </div>
     <th:block th:include="include :: footer" />
+    <th:block th:include="include :: datetimepicker-js" />
     <script th:inline="javascript">
         var prefix = ctx + "busi/bill"
         $("#form-bill-add").validate({
@@ -72,6 +71,12 @@
                 $.operate.save(prefix + "/add", $('#form-bill-add').serialize());
             }
         }
+
+        $("input[name='payTime']").datetimepicker({
+            format: "yyyy-mm-dd",
+            minView: "month",
+            autoclose: true
+        });
     </script>
 </body>
 </html>
