--- a/ruoyi-admin/src/main/resources/templates/busi/bill/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bill/edit.html
@@ -26,12 +26,6 @@
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">上一个节点(id)：</label>
-                <div class="col-sm-8">
-                    <input name="preId" th:field="*{preId}" class="form-control" type="text" required>
-                </div>
-            </div>
-            <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">账单类型：0押金、1损坏赔偿、2丢失赔偿、3超时赔偿：</label>
                 <div class="col-sm-8">
                     <select name="billType" class="form-control m-b" th:with="type=${@dict.getType('busi_bill_type')}" required>
@@ -40,7 +34,7 @@
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">账单标识：0-入账 1出账：</label>
+                <label class="col-sm-3 control-label is-required">账单标识：0-未支付 1-现金 2-支付宝：</label>
                 <div class="col-sm-8">
                     <select name="billSign" class="form-control m-b" th:with="type=${@dict.getType('busi_bill_sign')}" required>
                         <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}" th:field="*{billSign}"></option>
@@ -51,12 +45,6 @@
                 <label class="col-sm-3 control-label">备注：</label>
                 <div class="col-sm-8">
                     <input name="remark" th:field="*{remark}" class="form-control" type="text">
-                </div>
-            </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">父id：</label>
-                <div class="col-sm-8">
-                    <input name="parentId" th:field="*{parentId}" class="form-control" type="text">
                 </div>
             </div>
         </form>
