--- a/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/detail.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/detail.html
@@ -35,26 +35,21 @@
             <label class="col-sm-2 control-label">出版日期：</label>
             <div class="form-control-static" th:text="${#dates.format(busiBookBaseinfo.publishTime, 'yyyy-MM-dd')}">
         </div>
-
+        <div class="form-group">
+            <label class="col-sm-2 control-label">价格：</label>
+            <div class="form-control-static" th:text="${busiBookBaseinfo.price}" readonly="true">
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">简介：</label>
+<!--            <div class="form-control-static" th:text="${busiBookBaseinfo.introduce}" readonly="true">-->
+            <div class="col-sm-8">
+                <textarea type="text" name="" class="form-control" th:text="${busiBookBaseinfo.introduce}" readonly="true"></textarea>
+            </div>
+        </div>
     </form>
 </div>
 <th:block th:include="include :: footer" />
 <th:block th:include="include :: jsonview-js" />
-<script th:inline="javascript">
-    $(function() {
-        var operParam = [[${operLog.operParam}]];
-        if ($.common.isNotEmpty(operParam) && operParam.length < 2000) {
-            $("#operParam").JSONView(operParam);
-        } else {
-            $("#operParam").text(operParam);
-        }
-        var jsonResult = [[${operLog.jsonResult}]];
-        if ($.common.isNotEmpty(jsonResult) && jsonResult.length < 2000) {
-            $("#jsonResult").JSONView(jsonResult);
-        } else {
-            $("#jsonResult").text(jsonResult);
-        }
-    });
-</script>
+
 </body>
 </html>
