--- a/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bookbaseinfo/edit.html
@@ -49,6 +49,18 @@
                     </div>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label" is-required>价格：</label>
+                <div class="col-sm-8">
+                    <input name="price" class="form-control" th:field="*{price}" type="text">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">简介：</label>
+                <div class="col-sm-8">
+                    <textarea type="text" name="" class="form-control" th:field="*{introduce}"  placeholder="请输入简介"></textarea>
+                </div>
+            </div>
         </form>
     </div>
     <th:block th:include="include :: footer" />
