--- a/ruoyi-admin/src/main/resources/templates/system/user/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/edit.html
@@ -89,7 +89,7 @@
 
 
             <div class="row">
-                <div class="col-sm-12" shiro:hasPermission="system:user:role">
+                <!--<div class="col-sm-12" shiro:hasPermission="system:user:role" >
                     <div class="form-group">
                         <label class="col-xs-2 control-label">角色：</label>
                         <div class="col-xs-10">
@@ -98,8 +98,18 @@
                             </label>
                         </div>
                     </div>
+                </div>-->
+                <div class="col-sm-12" shiro:hasPermission="system:user:role">
+                    <div class="form-group">
+                        <label class="col-xs-2 control-label">角色：</label>
+                        <div class="col-xs-10">
+                            <label th:each="role:${roles}" class="check-box">
+                                <input name="role" type="checkbox" th:value="${role.roleId}" th:text="${role.roleName}" th:checked="${role.flag}" th:disabled="${role.status == '1'}">
+                            </label>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-12" shiro:lacksPermission="system:user:role">
+                <!--<div class="col-sm-12" shiro:lacksPermission="system:user:role">
                     <div class="form-group">
                         <label class="col-xs-2 control-label">角色：</label>
                         <div class="col-xs-10">
@@ -107,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-            </div>
+            </div>-->
             <h4 class="form-header h4">其他信息</h4>
             <div class="row">
                 <div class="col-sm-12">
