--- a/ruoyi-admin/src/main/resources/templates/busi/bill/qrCode.html
+++ b/ruoyi-admin/src/main/resources/templates/busi/bill/qrCode.html
@@ -9,7 +9,7 @@
     <div id="msg1">缴费成功后请关闭窗口，并刷新页面</div>
     <div id="msg"></div>
     <img src="" id="qrCode">
-    <div id="result"></div>
+    <div ><h3 style="color: red" id="result"></h3></div>
 </div>
 <th:block th:include="include :: footer" />
 <th:block th:include="include :: datetimepicker-js" />
