--- a/ruoyi-admin/src/main/resources/templates/system/user/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/add.html
@@ -96,23 +96,36 @@
                         <label class="col-xs-2 control-label">角色：</label>
                         <div class="col-xs-10">
                             <div class="form-control-static" th:text="读者">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6" shiro:hasPermission="system:dept:view">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">归属部门：</label>
+                        <div class="col-sm-8">
+                            <div class="input-group">
+                                <input name="deptName" onclick="selectDeptTree()" id="treeName" type="text" placeholder="请选择归属部门" class="form-control">
+                                <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                            </div>
                         </div>
                     </div>
                 </div>
 
+            </div>
+            <div class="row">
                 <div class="col-sm-6">
                     <div class="form-group">
                         <label class="col-sm-4 control-label">用户状态：</label>
                         <div class="col-sm-8">
                             <label class="toggle-switch switch-solid">
-	                            <input type="checkbox" id="status" checked>
-	                            <span></span>
-	                        </label>
+                                <input type="checkbox" id="status" checked>
+                                <span></span>
+                            </label>
                         </div>
                     </div>
                 </div>
             </div>
-
 
             <h4 class="form-header h4">其他信息</h4>
             <div class="row">
